set(HEADER_LIST "${CPPViz_SOURCE_DIR}/include/cpp_viz/lib.hpp")
add_library(algs rejection_sampling.cpp lssolver.cpp regressions.cpp ${HEADER_LIST})
target_include_directories(algs PUBLIC ../include)
target_link_libraries(algs PUBLIC Boost::boost Eigen3::Eigen ${ARMADILLO_LIBRARIES}) # Matplot++::matplot Eigen3::Eigen ${Boost_LIBRARIES} xtensor)
target_compile_features(algs PUBLIC cxx_std_11)

pybind11_add_module(${PROJECT_NAME} pywrap.cpp)
target_compile_definitions(${PROJECT_NAME} PUBLIC VERSION_INFO=${VERSION_INFO})
target_include_directories(${PROJECT_NAME} PUBLIC ${PYBIND11_INCLUDE_DIRS} ../include)
target_link_libraries(${PROJECT_NAME} PRIVATE Boost::boost algs)
